-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.3.0-beta1, Qt Creator 4.5.0-rc1
-
59e2774d0d5b4746902e26949c68cf0a63ce81a4 (qt-creator/qt-creator/master)
Steps to reproduce:
- create Qt Quick Application from template (make sure you have ui.qml file)
- on the 'Projects' navigation tree trigger 'Open With' -> 'QMLJS Editor' on the node with the MainForm.ui.qml
Current result:
- QC opens the file inside Quick Designer
- you have to switch back to Edit mode to manually edit this file (or use the now embedded editor inside the Designer)
Expected result:
- QC should open the file inside QmlJS Editor..
For Gerrit Dashboard: QTCREATORBUG-18123 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
265994,1 | Fix bug for with not correctly open *.ui.qml file in QMLJS editor via context menu | 4.9 | qt-creator/qt-creator | Status: ABANDONED | -1 | 0 |
268184,4 | Qt Quick: Separate Qt Quick Designer and QMLJS editor factories | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |